debugの表示追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,5 +27,11 @@
       </div>
     </footer>
 
+    <% if Rails.env.development?%>
+      <div class="debug">
+        <%= debug(params) %>
+      </div>
+    <% end %>
+
   </body>
 </html>
