userの新規登録・ログイン・ログアウト実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,14 @@
       <% end %>
     </header>
 
+    <%# deviseログイン・ログアウト時のflash%>
+    <% if notice %>
+      <p class="alert alert-success text-center"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger text-center"><%= alert %></p>
+    <% end %>
+
     <div class="main-container container-fluid">
       <%= yield %>
     </div>
