--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,51 @@
-<h2>Sign up</h2>
+<div class="container py-4">
+  <div class="row justify-content-center">
+    <div class="col-5">
+      <div class="jumbotron">
+        
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= devise_error_messages! %>
+          
+          <h2 class="text-center font-weight-bold">新規登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+          <div class="form-group">
+            <%= f.label :nickname, "名前" %>
+            <%= f.text_field :nickname, placeholder: "名前を入力して下さい",
+                                        class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class="form-group">
+            <%= f.label :name_code, "ID" %>
+            <%= f.text_field :name_code, placeholder: "@から始める英数字を入力して下さい",
+                                          class: "form-control" %>
+            <small class="text-muted">あなたのメールは他の誰とも共有しません。</small>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email, "メールアドレス" %>
+            <%= f.email_field :email, autocomplete:"email",
+                                      placeholder: "メールアドレスを入力して下さい",
+                                      class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password, "パスワード" %>
+            <%= f.password_field :password, autocomplete: "off",
+                                            placeholder: "半角英数字(6文字~20文字)",
+                                            class:"form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confimation, "パスワード確認" %>
+            <%= f.password_field :password_confimation, autocomplete: "off",
+                                                        placeholder: "もう一度、パスワードを入力して下さい",
+                                                        class:"form-control" %>
+          </div>
+
+          <%= f.submit "-アカウント作成-", class:"btn btn-primary btn-block" %>
+        <% end %>
+
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
