--- a/app/views/layouts/header/_header_users.html.erb
+++ b/app/views/layouts/header/_header_users.html.erb
@@ -10,24 +10,27 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class: 'nav-link' %>
+          <%= link_to 'Home', root_path, class: 'nav-link text-white' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'About', about_path, class: 'nav-link' %>
+          <%= link_to 'About', about_path, class: 'nav-link text-white' %>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'Post', posts_path, class: 'nav-link' %>
+            <%= link_to current_user.name_code, user_path(current_user), class: 'nav-link text-white' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <%= link_to 'Post', posts_path, class: 'nav-link text-white' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link text-white' %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+            <%= link_to 'Log in', new_user_session_path, class: 'nav-link text-white' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+            <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link text-white' %>
           </li>
         <% end %>
       </ul>
