userの編集機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,14 @@
 
     <% if Rails.env.development?%>
       <div class="debug">
+        <%= debug(response.status) %>
+        <p>response status</p>
         <%= debug(params) %>
+        <p>params</p>
+        <%= debug(@user.inspect) %>
+        <p>@user</p>
+        <%= debug(current_user.inspect) %>
+        <p>current_user</p>
       </div>
     <% end %>
 
