--- a/app/views/layouts/header/_header_users.html.erb
+++ b/app/views/layouts/header/_header_users.html.erb
@@ -29,7 +29,7 @@
           <li class="nav-item">
             <%= link_to 'Log in', new_user_session_path, class: 'nav-link text-white' %>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ml-2">
             <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link text-white' %>
           </li>
         <% end %>
