--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,14 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-3 bg-dark">
+      <p class="text-center text-white">ここにユーザー情報</p>
+    </div>
+
+    <div class="col bg-secondary">
+      <p class="text-center text-white">ここに投稿情報</p>
+    </div>
+  </div>
+</div>
