--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
-
+zzzz
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-3 bg-dark">
