usersサイドバー変更

--- a/app/views/layouts/sidebar/_sidebar_users.html.erb
+++ b/app/views/layouts/sidebar/_sidebar_users.html.erb
@@ -1,1 +1,69 @@
-<p>sidebar</p>
+<h4 class="d-flex justify-content-center">
+  <span class="text-muted">ユーザー情報</span>
+</h4>
+<ul class="list-group mb-3">
+  <li class="list-group-item d-flex justify-content-center lh-condensed">
+		<div>
+			<h5 class="text-center"><%= current_user.nickname %></h5>
+			<h5 class="text-center"><%= current_user.name_code %></h5>
+		</div>
+	</li>
+	<li class="list-group-item d-flex justify-content-center lh-condensed">
+		<div>
+			<h6 class="text-center"><%= current_user.email %></h6>
+		</div>
+	</li>
+	<li class="list-group-item d-flex justify-content-center lh-condensed">
+		<div>
+			<h6 class="text-center">誕生日</h6>
+			<p class="text-center"><%= current_user.birthday %></p>
+		</div>
+	</li>
+	<li class="list-group-item d-flex justify-content-center lh-condensed">
+		<div>
+			<h6 class="text-center">自己紹介</h6>
+			<p class="text-center" style="word-wrap: break-word;"><%= current_user.introduction %></p>
+		</div>
+	</li>
+	<li class="list-group-item d-flex justify-content-center lh-condensed">
+		<div>
+			<h6 class="text-center">自己紹介</h6>
+			<p class="text-center" style="word-wrap: break-word;">あああああああああああああああああああああああああ</p>
+		</div>
+	</li>
+</ul>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th colspan="2" class="text-center">ユーザー情報</th>
+ 
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">名前</th>
+      <td><%= current_user.nickname %></td>
+    </tr>
+    <tr>
+      <th scope="row">ID</th>
+      <td><%= current_user.name_code %></td>
+    </tr>
+    <tr>
+      <th scope="row">email</th>
+      <td><%= current_user.email %></td>
+    </tr>
+    <tr>
+      <th scope="row">誕生日</th>
+      <td><%= current_user.birthday %></td>
+    </tr>
+    <tr>
+      <th scope="row">自己紹介</th>
+      <td><%= current_user.introduction %></td>
+    </tr>
+    <tr>
+      <th scope="row">自己紹介</th>
+      <td>自己紹介が折り返されない。。。ああああああああああああ</td>
+    </tr>
+  </tbody>
+</table>
