--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="bg-light">
     <!--Header-->
     <% if admin_signed_in? %>
       <%= render 'layouts/header/header_admins'  %>
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="main-container container-fluid">
+    <div>
       <%= yield %>
     </div>
 
