--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,28 @@
 <h1>Posts#edit</h1>
 <p>Find me in app/views/posts/edit.html.erb</p>
+
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-3">
+      <%= render 'layouts/sidebar/sidebar_users.html.erb'  %>
+    </div>
+
+    <div class="col-8">
+      <h4 class="d-flex justify-content-center">
+        <span class="text-muted">投稿詳細</span>
+      </h4>
+        <table class="table table-sm table-striped"  style="table-layout: fixed; overflow: hidden;">
+          <thead>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">
+              </th>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+    </div>  
+
+  </div>
+</div>
