--- a/app/views/layouts/header/_header_users.html.erb
+++ b/app/views/layouts/header/_header_users.html.erb
@@ -25,7 +25,7 @@
           </li>
           <% if user_signed_in? %>
             <li class="nav-item <%= 'active' if params[:controller] == 'users' %>">
-              <%= link_to current_user.name_code, user_path(current_user), class: 'nav-link' %>
+              <%= link_to current_user.nickname, user_path(current_user), class: 'nav-link' %>
             </li>
             <li class="nav-item <%= 'active' if current_page?(posts_path) %>">
               <%= link_to '投稿一覧', posts_path, class: 'nav-link' %>
