--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,54 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-3">
+      <%= render 'layouts/sidebar/sidebar_users.html.erb'  %>
+    </div>
 
-<div class="row justify-content-center">
-  <div class="col-4">
-    <%= link_to "編集", edit_user_path(current_user), class: "btn btn-secondary btn-sm mt-4"%>
-    <%= link_to "退会", confirm_user_path(current_user), class: "btn btn-secondary btn-sm mt-4"%>
-    <div class="card border-secondary text-white text-center" style="height: 36em;">
-      <div class="card-header font-weight-bold" style="background-color:#00008b;">
-        ユーザー情報
+    <div class="col-7">
+      <% if @user.errors.any? %>
+        <div id="error_explanation" class="alert alert-danger">
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div class="jumbotron">
+        <h2 class="text-center font-weight-bold">ユーザー情報編集</h1>
+        <%= form_for(@user) do |f| %>
+          <div class="form-group">
+            <%= f.label :nickname, "名前" %>
+            <%= f.text_field :nickname, placeholder: "名前を入力して下さい",
+                                         class: "form-control" %>
+          </div>
+    
+          <div class="form-group">
+            <%= f.label :email, "メールアドレス" %>
+            <%= f.email_field :email, placeholder: "sample@sample.com",
+                                         class: "form-control" %>
+          </div>
+    
+          <div class="form-group">
+            <%= f.label :birthday, "誕生日" %>
+            <%= f.text_field :birthday, placeholder: "YYYY/MM",
+                                         class: "form-control" %>
+          </div>
+    
+          <div class="form-group">
+            <%= f.label :introduction, "自己紹介" %>
+            <%= f.text_area :introduction, rows: "5",
+                                           placeholder: "200文字以内で入力して下さい",
+                                           class: "form-control" %>
+          </div>
+    
+          <%= f.submit "-編集-", class:"btn btn-primary btn-block" %>
+        <% end %>
       </div>
-      <div class="card-body">
-        <ul class="list-group list-group-flush text-dark">
-          <li class="list-group-item">
-            <p class="small text-secondary">名前</p>
-            <%= @user.nickname %>
-          </li>
-          <li class="list-group-item">
-            <p class="small text-secondary">ID</p>
-            <%= @user.name_code %>
-          </li>
-          <li class="list-group-item">
-            <p class="small text-secondary">email</p>
-            <%= @user.email %>
-          </li>
-          <li class="list-group-item">
-            <p class="small text-secondary">誕生日</p>
-            <%= @user.birthday %>
-          </li>
-          <li class="list-group-item">
-            <p class="small text-secondary">自己紹介</p>
-            <%= @user.introduction %>
-            <%= Faker::Number.number(300) %>
-          </li>
-        </ul>
+      <div class="row justify-content-center">
+        <%= link_to "退会", confirm_user_path(current_user), class: "btn btn-secondary btn-sm mt-4"%>
       </div>
     </div>
+
   </div>
 </div>
