admin/～のコントローラーとルーティング変更

--- a/app/views/layouts/sidebar/_sidebar_admins.html.erb
+++ b/app/views/layouts/sidebar/_sidebar_admins.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "管理者一覧", admins_path, class: "text-dark" %>
         </li>
         <li class="nav-link">
-          <%= link_to "ユーザー一覧", admins_users_path, class: "text-dark" %>
+          <%= link_to "ユーザー一覧", admin_users_path, class: "text-dark" %>
         </li>
       </ul>
     </div>
@@ -26,10 +26,10 @@
     <div id="collapse2" class="collapse">
       <ul>
         <li class="nav-link">
-          <%= link_to "蔵元登録", new_admins_brewery_path, class: "text-dark" %>
+          <%= link_to "蔵元登録", new_admin_brewery_path, class: "text-dark" %>
         </li>
         <li class="nav-link">
-          <%= link_to "蔵元一覧", admins_breweries_path, class: "text-dark" %>
+          <%= link_to "蔵元一覧", admin_breweries_path, class: "text-dark" %>
         </li>
       </ul>
     </div>
@@ -40,10 +40,10 @@
     <div id="collapse3" class="collapse">
       <ul>
         <li class="nav-link">
-          <%= link_to "日本酒登録", new_admins_sake_path, class: "text-dark" %>
+          <%= link_to "日本酒登録", new_admin_sake_path, class: "text-dark" %>
         </li>
         <li class="nav-link">
-          <%= link_to "日本酒一覧", admins_sakes_path, class: "text-dark" %>
+          <%= link_to "日本酒一覧", admin_sakes_path, class: "text-dark" %>
         </li>
       </ul>
     </div>
@@ -54,7 +54,7 @@
     <div id="collapse4" class="collapse">
       <ul>
         <li class="nav-link">
-          <%= link_to "投稿一覧", admins_sakes_path, class: "text-dark" %>
+          <%= link_to "投稿一覧", admin_posts_path, class: "text-dark" %>
         </li>
       </ul>
     </div>
