--- a/app/views/layouts/header/_header_admins.html.erb
+++ b/app/views/layouts/header/_header_admins.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top shadow">
     <div class="container-fluid">
   
       <!-- Brand -->
