--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!--サイドバー-->
-    <nav class="col-2 d-none d-md-block bg-light sidebar">
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
       <%= render 'layouts/sidebar/sidebar_admins.html.erb' %>
     </nav>
 
