--- a/app/views/admin/sakes/index.html.erb
+++ b/app/views/admin/sakes/index.html.erb
@@ -1,2 +1,58 @@
-<h1>Admin::Sakes#index</h1>
-<p>Find me in app/views/admin/sakes/index.html.erb</p>
+<div class="container-fluid">
+  <div class="row">
+    <!--サイドバー-->
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+      <%= render 'layouts/sidebar/sidebar_admins.html.erb' %>
+    </nav>
+
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+				<h2>日本酒一覧</h2>
+				<div class="btn-toolbar mb-2 mb-md-0">
+					<div class="btn-group mr-2">
+						<button class="btn btn-sm btn-outline-secondary">シェア</button>
+						<button class="btn btn-sm btn-outline-secondary">輸出</button>
+					</div>
+					<button class="btn btn-sm btn-outline-secondary dropdown-toggle">
+						今週
+					</button>
+				</div>
+			</div>
+			<div class="table-responsive">
+				<table class="table table-striped table-sm">
+					<thead>
+						<tr>
+							<th>日本酒名</th>
+							<th>蔵元名</th>
+							<th>特定名称</th>
+							<th>確認フラグ</th>
+							<th></th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+					  <% @sakes.each do |sake| %>
+  						<tr>
+  							<td><%= sake.brand %></td>
+  							<td><%= sake.brewery.name %></td>
+  							<td><%= sake.specially_designated %></td>
+  							<% if sake.is_confirmed == true  %>
+    							<td class="text-succcess">確認済み</td>
+    						<% elsif sake.is_confirmed == false %>
+    						  <td class="text-danger">未確認</td>
+    						<% end %>
+    						<td><%= link_to "詳細・編集", edit_admin_sake_path(sake.id), class: "text-info" %></td>
+  						  <td>
+  						    <%= link_to "削除", admin_sake_path(sake.id), method: :delete,
+  						                                                  data: { confirm: "本当に削除しますか？" },
+  						                                                  class: "text-danger" %>
+  						  </td>
+  						</tr>
+  					<% end %>
+					</tbody>
+				</table>
+			</div>
+    </main>
+
+  </div>
+</div>
