--- a/app/views/admin/sakes/edit.html.erb
+++ b/app/views/admin/sakes/edit.html.erb
@@ -10,7 +10,7 @@
 				<h2>日本酒詳細・編集</h2>
 			</div>
 
-			<%= render 'form', brewery: @brewery, url: admin_sake_path(@sake.id),
+			<%= render 'form', sake: @sake, url: admin_sake_path(@sake.id),
 																			submit: "-編集する-" %>
 
     </main>
