--- a/app/views/admin/sakes/new.html.erb
+++ b/app/views/admin/sakes/new.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Sakes#new</h1>
-<p>Find me in app/views/admin/sakes/new.html.erb</p>
+<div class="container-fluid">
+  <div class="row">
+    <!--サイドバー-->
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+      <%= render 'layouts/sidebar/sidebar_admins.html.erb' %>
+    </nav>
+
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+				<h2>日本酒詳細・編集</h2>
+			</div>
+
+			<%= render 'form', brewery: @brewery, url: admin_sakes_path,
+																			submit: "-登録する-" %>
+
+    </main>
+
+  </div>
+</div>
