--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -7,12 +7,24 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-				<h2>管理者登録</h2>
+				<h2>管理者情報編集</h2>
 				<!--検索機能-->
+				<%= link_to "パスワード変更画面へ", edit_password_admin_path(@admin.id), class: "btn btn-info" %>
 			</div>
 
-			<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
+			<%= form_for(@admin) do |f| %>
+        <% if @admin.errors.any? %>
+          <div id="error_explanation">
+            <h2>
+              <%= @admin.errors.count %>件のエラーが発生しました
+            </h2>
+            <ul>
+              <% @admin.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>  
 
         <div class="container">
           <div class="row justify-content-center">
@@ -32,22 +44,14 @@
                 <%= f.email_field :email, placeholder: "半角英数字で入力して下さい。", class: "form-control" %>
               </div>
               <div class="mb-3">
-                <%= f.label :password, "パスワード" %>
-                <%= f.password_field :password, autocomplete: "off",
-                                                placeholder: "半角英数字(6文字~20文字)",
-                                                class:"form-control" %>
-              </div>
-              <div class="mb-3">
-                <%= f.label :password_confimation, "パスワード確認" %>
-                <%= f.password_field :password_confimation, autocomplete: "off",
-                                                            placeholder: "もう一度、パスワードを入力して下さい",
-                                                            class:"form-control" %>
-              </div>
-              <div class="mb-3">
                 <label class="mr-3"><%= f.radio_button :is_main_administer, "false", class: "rd" %> サブ管理者</label>
                 <label><%= f.radio_button :is_main_administer, "true", class: "rd" %> メイン管理者</label>
               </div>
-              <%= f.submit "-登録する-", class: "btn btn-primary" %>
+              <div class="mb-3">
+                <label class="mr-3"><%= f.radio_button :is_deleted, "false", class: "rd" %> アカウント運用</label>
+                <label><%= f.radio_button :is_deleted, "true", class: "rd" %> アカウント停止</label>
+              </div>
+              <%= f.submit "-変更する-", class: "btn btn-primary" %>
             </div>
           </div>
         </div>
