--- a/app/views/layouts/sidebar/_sidebar_admins.html.erb
+++ b/app/views/layouts/sidebar/_sidebar_admins.html.erb
@@ -8,7 +8,7 @@
       <ul>
         <% if current_admin.is_main_administer == true %>
           <li class="nav-link">
-            <%= link_to "管理者登録", new_admin_path, class: "text-dark" %>
+            <%= link_to "管理者登録", new_admin_registration_path, class: "text-dark" %>
           </li>
         <% end %>
         <li class="nav-link">
