--- a/app/views/admin/breweries/edit.html.erb
+++ b/app/views/admin/breweries/edit.html.erb
@@ -8,6 +8,7 @@
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
 				<h2>蔵元詳細・編集</h2>
+				<%= link_to "一覧画面へ", admin_breweries_path, class: "btn btn-info" %>
 			</div>
 
 			<%= render 'form', brewery: @brewery, url: admin_brewery_path(@brewery.id),
