--- a/app/views/admin/breweries/index.html.erb
+++ b/app/views/admin/breweries/index.html.erb
@@ -6,18 +6,37 @@
     </nav>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
 				<h2>蔵元一覧</h2>
-				<div class="btn-toolbar mb-2 mb-md-0">
-					<div class="btn-group mr-2">
-						<button class="btn btn-sm btn-outline-secondary">シェア</button>
-						<button class="btn btn-sm btn-outline-secondary">輸出</button>
-					</div>
-					<button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-						今週
-					</button>
-				</div>
+				<!--検索機能-->
+				<div>
+					<div class="input-group form-inline">
+	          <%= search_form_for @search, url: admin_breweries_path do |f| %>
+	            <%= f.text_field :name_or_post_code_or_address_or_phone_number_or_email_or_url_cont,
+	            								 class: "form-control" %>
+	            <span class="input-group-btn">
+	              <%= f.button fa_icon("search"), class: 'btn btn-secondary'%>
+	            </span>
+	          <% end %>
+	        </div>
+        </div>
 			</div>
+
+			<div class="text-center mb-4">
+				ここに各県の蔵元数グラフを載せたい
+			</div>	
+
+			<div class="col-12 text-right mb-1" >
+        <%= page_entries_info @breweries %>
+      </div>
+			<div class="col-12 mb-2 crearfix">
+        <nav aria-label="Page navigation example">
+          <div class="pagination float-right small" >
+            <%= paginate @breweries %>
+          </div>
+        </nav>
+      </div>
+
 			<div class="table-responsive">
 				<table class="table table-striped table-sm">
 					<thead>
@@ -34,11 +53,19 @@
 					  <% @breweries.each do |brewery| %>
   						<tr>
   							<td><%= brewery.name %></td>
-  							<td><%= brewery.post_code %></td>
+  							<td><%= brewery.post_code.insert(3, '-') %></td>
   							<td><%= brewery.address %></td>
-  							<td><%= brewery.phone_number %></td>
+  							<td>
+  								<% if brewery.phone_number.length == 10 %>
+  									<%= brewery.phone_number.insert(3, '-').insert(6, '-') %>
+  								<% elsif brewery.phone_number.length == 11 %>
+  									<%= brewery.phone_number.insert(3, '-').insert(7, '-') %>
+  								<% else %>
+  									電話番号を確認して下さい
+  								<% end %>
+  							</td>
   							<% if brewery.is_confirmed == true  %>
-    							<td class="text-succcess">確認済み</td>
+    							<td class="text-success">確認済み</td>
     						<% elsif brewery.is_confirmed == false %>
     						  <td class="text-danger">未確認</td>
     						<% end %>
