--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
       </footer>
     <% end %>
 
+<%
+=begin
+%>
     <% if Rails.env.development?%>
       <% if user_signed_in? %>
         <div class="debug">
@@ -66,6 +69,8 @@
         </div>
       <% end %>
     <% end %>
-
+<%
+=end
+%>
   </body>
 </html>
