--- a/app/views/layouts/sidebar/_sidebar_users.html.erb
+++ b/app/views/layouts/sidebar/_sidebar_users.html.erb
@@ -1,4 +1,4 @@
-<h4 class="d-flex justify-content-center">
+<h4 class="d-flex justify-content-center mb-3">
   <span class="text-muted">ユーザー情報</span>
 </h4>
 <ul class="list-group mb-3">
@@ -21,17 +21,14 @@
 	<li class="list-group-item d-flex justify-content-center lh-condensed">
 		<div>
 			<h6 class="text-center">自己紹介</h6>
-			<p class="text-center" style="word-wrap: break-word;"><%= current_user.introduction %></p>
-		</div>
-	</li>
-	<li class="list-group-item d-flex justify-content-center lh-condensed">
-		<div>
-			<h6 class="text-center">自己紹介</h6>
 			<p class="text-center" style="word-wrap: break-word;">あああああああああああああああああああああああああ</p>
 		</div>
 	</li>
 </ul>
 
+<%
+=begin
+%>
 <table class="table">
   <thead>
     <tr>
@@ -62,3 +59,6 @@
     </tr>
   </tbody>
 </table>
+<%
+=end
+%>
