--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#top</h1>
-<p>Find me in app/views/static_pages/top.html.erb</p>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-12 text-center">
+      ここにお洒落なセリフと全体に背景画像
+    </div>
+    <!--<div class="col-6">-->
+    <!--  <div class="card">-->
+    <!--    <div class="card-body">-->
+          
+    <!--    </div>-->
+    <!--  </div>-->
+    <!--</div>-->
+  </div>
+</div>
