--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,11 @@
 <div class="container mt-5">
+
+  <%= render 'layouts/navbar_users.html.erb' %>
+
   <div class="row justify-content-center">
-    <div class="col-3">
-      <%= render 'layouts/sidebar/sidebar_users.html.erb'  %>
-    </div>
+    <!--<div class="col-3">-->
+    <!--  <%#= render 'layouts/sidebar/sidebar_users.html.erb'  %>-->
+    <!--</div>-->
 
     <div class="col-7">
       <% if @user.errors.any? %>
