--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -76,11 +76,9 @@
             <% end %>
             <%= sake_field.fields_for :posts do |post_field| %>
               <div class="row">
-                <div class="col-6q" id ="star">
+                <div class="col-6" id ="star">
                   <%= post_field.label :star, "評価（必須）" %><br>
                   <%= post_field.hidden_field :star, id: :post_star %>
-                  <%#= post_field.text_field :star, placeholder: "例）-1.0",
-                                                           class: "form-control border border-warning" %>
                 </div>
                 <div class="col-6">
                   <%= post_field.label :image, "画像" %>
