--- a/app/views/layouts/_navbar_users.html.erb
+++ b/app/views/layouts/_navbar_users.html.erb
@@ -21,10 +21,10 @@
     <% end %>
   </li>
   <li class="nav-item">
-    <%# if current_page?(posts_path) %>
-      <%#= link_to '投稿解析', '#', class: 'nav-link active' %>
-    <%# else %>
-      <%= link_to '投稿解析', '#', class: 'nav-link' %>
-    <%# end %>
+    <% if current_page?(analyses_index_path) %>
+      <%= link_to '投稿解析', analyses_index_path, class: 'nav-link active' %>
+    <% else %>
+      <%= link_to '投稿解析', analyses_index_path, class: 'nav-link' %>
+    <% end %>
   </li>
 </ul>
