--- a/app/views/layouts/header/_header_users.html.erb
+++ b/app/views/layouts/header/_header_users.html.erb
@@ -35,12 +35,14 @@
               <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-warning text-warning' %>
             </li>
           <% else %>
-            <li class="nav-item">
-              <%= link_to 'Log in', new_user_session_path, class: 'nav-link btn btn-outline-info text-info' %>
-            </li>
-            <li class="nav-item ml-2">
-              <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link btn btn-outline-secondary text-secondary' %>
-            </li>
+            <% if current_page?(about_path) %>
+              <li class="nav-item">
+                <%= link_to 'Log in', new_user_session_path, class: 'nav-link btn btn-outline-info text-info' %>
+              </li>
+              <li class="nav-item ml-2">
+                <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link btn btn-outline-secondary text-secondary' %>
+              </li>
+            <% end %>
           <% end %>
         </ul>
 
