--- a/app/views/layouts/header/_header_users.html.erb
+++ b/app/views/layouts/header/_header_users.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
 
       <!-- Brand -->
@@ -35,12 +35,12 @@
               <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-warning text-warning' %>
             </li>
           <% else %>
-            <% if current_page?(about_path) %>
+            <% unless current_page?(root_path) %>
               <li class="nav-item">
-                <%= link_to 'Log in', new_user_session_path, class: 'nav-link btn btn-outline-info text-info' %>
+                <%= link_to 'ログイン', new_user_session_path, class: 'nav-link btn btn-outline-info text-info' %>
               </li>
               <li class="nav-item ml-2">
-                <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link btn btn-outline-secondary text-secondary' %>
+                <%= link_to '新規登録', new_user_registration_path, class: 'nav-link btn btn-outline-secondary text-secondary' %>
               </li>
             <% end %>
           <% end %>
