--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,14 +1,111 @@
 <div class="container">
-  <div class="row mt-5">
-    <div class="col-12 text-center">
-      ここにabout
+  <section>
+    <h2 class="text-center my-5">お酒、飲んでますか？</h2>
+    <div class="row">
+      <div class="col-6 px-4">
+        <h4 class="text-center mt-5">一日の終りに</h5>
+        <h4 class="text-center mt-5">会社の帰りに</h5>
+        <h4 class="text-center mt-5">美味しいお酒を求めて</h5>
+      </div>
+      <div class="col-6 mb-4">
+        <%= image_tag "about-izakaya.jpg", class: "img-fluid rounded" %>
+      </div>
     </div>
-    <!--<div class="col-6">-->
-    <!--  <div class="card">-->
-    <!--    <div class="card-body">-->
-          
-    <!--    </div>-->
-    <!--  </div>-->
-    <!--</div>-->
+  </section>
+
+  <hr class="my-5">
+
+  <section>
+    <div class="row">
+      <div class="col-6 px-4 mt-5">
+        <%= image_tag "about-izakaya.jpg", class: "img-fluid rounded" %>
+      </div>
+      <div class="col-6 mt-5">
+        <h4 class="mt-5">飲んだお酒を投稿しよう</h4>
+        <hr class="my-1">
+        <p class="lead">楽しすぎて忘れる前に</p>
+        <p class="lead">酔ってしまうと何を飲んだのか</p>
+        <p class="lead">どんな味で何が好きだとその時思いましたか？</p>
+        <p class="lead">日々のお酒を投稿することで忘れずに明日の飲酒生活に！</p>
+      </div>
+    </div>
+  </section>
+  
+  <hr class="my-5">
+
+  <section>
+    <div class="row">
+      <div class="col-6 px-4 mt-5">
+        <h4 class="mt-5">飲んだお酒を投稿しよう</h4>
+        <hr class="my-1">
+        <p class="lead">楽しすぎて忘れる前に</p>
+        <p class="lead">酔ってしまうと何を飲んだのか</p>
+        <p class="lead">どんな味で何が好きだとその時思いましたか？</p>
+        <p class="lead">日々のお酒を投稿することで忘れずに明日の飲酒生活に！</p>
+      </div>
+      <div class="col-6 mt-5">
+        <%= image_tag "about-izakaya.jpg", class: "img-fluid rounded" %>
+      </div>
+    </div>
+  </section>
+  
+  <hr class="my-5">
+
+  <div class="pricing-header px-3 py-3 mx-auto text-center">
+    <h1 class="display-4 mb-3">さあ始めよう</h1>
+    <p class="lead">疲れた日も楽しい日も、お祝いの日もお酒は様々な場面で楽しませてくれます。</p>
+    <p class="lead">もっと美味しいお酒に出会う為に今日から始めましょう！</p>
   </div>
+
+  <div class="container ">
+    <div class="card-deck mb-3 text-center">
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">飲もう</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title"><%= fa_icon "beer" %></h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>まずは飲もう！</li>
+            <li>飲んで、気分転換して</li>
+            <li>明日からまた頑張って！</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">投稿しよう</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title"><%= fa_icon "comments" %></h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>飲んだら投稿しよう</li>
+            <li>飲んだお酒を忘れる前に</li>
+            <li>楽しいいのは素晴らしいけど！</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">好みを知ろう</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title"><%= fa_icon "chart-bar" %></h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>どんなお酒が好きだろう</li>
+            <li>飲めば飲むほどわかってくる</li>
+            <li>自分でも気付いてなかった好みを！</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="pb-5 mx-auto text-center">
+    <%= link_to 'アカウント作成', new_user_registration_path, class: 'btn btn btn-primary mr-3' %>
+    <%= link_to 'ログイン', new_user_session_path, class: 'btn btn btn-outline-primary' %>
+  </div>
+
 </div>
