投稿画像を公開用に変更

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -9,7 +9,7 @@
         <h4 class="text-center mt-5">美味しいお酒を求めて</h5>
       </div>
       <div class="col-6 mb-4">
-        <%= image_tag "about-izakaya.jpg", class: "img-fluid rounded" %>
+        <%= image_tag "/images/about-izakaya.jpg", class: "img-fluid rounded" %>
       </div>
     </div>
   </section>
@@ -20,7 +20,7 @@
   <section>
     <div class="row">
       <div class="col-6 px-4 mt-5">
-        <%= image_tag "about-izakaya.jpg", class: "img-fluid rounded" %>
+        <%= image_tag "/images/about-2nd.jpg", class: "img-fluid rounded" %>
       </div>
       <div class="col-6 mt-5">
         <h4 class="mt-5">飲んだお酒を投稿しよう</h4>
