--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,7 +3,7 @@
   position: relative;
   height: 100vh;
   min-height: 300px;
-  background: url("top-photo.jpg");
+  background-image: url(/images/top-photo.jpg);
   background-size: cover;
   background-position: center 40%;
 }
