--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row justify-content-center">
 
     <div class="col-5 mb-5">
-      <% @user.posts.each do |post| %>
+      <% @posts.each do |post| %>
         <div class="card mb-1">
           <div class="card-header">
             <%= post.user.nickname %>
